manifests/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-sample
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: cloud-sample
        command: ["java","-jar","/app.jar"]
        args: ["--spring.config.location=file:/config/application.yml"]
        volumeMounts:
        - name: cloud-sample-volume
          mountPath: /mnt/cloud-sample
          readOnly: false
          subPath: cloud-sample
        - name: application-properties
          mountPath: /config
          readOnly: true

      volumes:
      - name: cloud-sample-volume
        persistentVolumeClaim:
          claimName: cepg-aa-std-pvc

      - name: application-properties
        configMap:
          name: cloud-sample-configmap
          items:
          - key: application.yml
            path: application.yml
          defaultMode: 420
